--- a/nextauth/package.json
+++ b/nextauth/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "bulma": "^0.9.3",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "prisma": "^3.7.0"
   }
 }
